sponsor overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,9 +228,9 @@
 
 		.inner.sponsors img {
 			display: inline;
-			max-width: 180px;
+			max-width: 125px;
 			max-height: 88px;
-			vertical-align: top;
+			vertical-align: middle;
 		}
 
 /* Grid */
